<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bank payments</string>
    <string name="action_settings">Settings</string>
    <string name="button_next">NEXT</string>
    <string name="button_edit">EDIT</string>
    <string name="button_pay">PAY</string>
   	<string name="button_yes">YES</string>
   	<string name="button_no">NO</string>
   	<string name="button_ok">OK</string>
   	<string name="button_cancel">CANCEL</string>
   	<string name="debit_account">DEBIT ACCOUNT</string>
    <string name="discard_title">Discard payment</string>
   	<string name="discard_payment">Are you sure you want to discard the payment?</string>
   	<string name="enter_password">Vnesite podatke o geslu za potrditev plačila</string>
   	<string name="execution_date">EXECUTION DATE*</string>
    <string name="from_template">From template</string>
    <string name="header_title">Domestic payment</string>
    <string name="new_payment">New payment</string>
    <string name="menu_button_1_text">NEW PAYMENT</string>
    <string name="menu_button_2_text">SAVE AS TRUSTIE</string>
    <string name="menu_button_3_text">SAVE AS TEMPLATE</string>
    <string name="menu_button_4_text">GET RECIEPT</string>
    <string name="optional_data">OPTIONAL DATA</string>
    <!-- string name="optional_data_1">Mike knight</string>
    <string name="optional_data_2">12345678</string>
   	<string name="optional_data_3">Lorem ipsum</string-->
   	<string name="optional_payer_name">PAYER NAME</string>
   	<string name="optional_data_payer_name">PAYER NAME:</string>
    <string name="optional_debtor_reference">DEBTOR REFERENCE</string>
    <string name="optional_data_debtor_reference">DEBTOR REFERENCE:</string>
    <string name="optional_creditor_reference">CREDITOR REFERENCE</string>
    <string name="optional_data_creditor_reference">CREDITOR REFERENCE:</string>
    <string name="optional_data_urgent">URGENT PAYMENT</string>
    <string name="optional_data_urgent_payment">URGENT PAYMENT:</string>
    <string name="password">Vnesite geslo</string>
   	<string name="password_title">Password</string>
   	<string name="pay_from">PAY FROM</string>
    <string name="pay_to">PAY TO</string>
    <string name="pay_to_account">PAY TO ACCOUNT</string>
    <string name="pay_to_name">CREDITOR NAME</string>
   	<string name="credit_account">CREDIT ACCOUNT</string>
    <string name="payment_data">PAYMENT DATA</string>
    <string name="payment_data_amount">PAYMENT AMOUNT:</string>
    <string name="payment_data_date">EXECUTION DATE:</string>
    <string name="payment_data_details">PAYMENT DETAILS:</string>
    <string name="payment_amount">PAYMENT AMOUNT*</string>
    <string name="payment_currency">EUR</string>
    <string name="payment_type">PAYMENT TYPE</string>
    <string name="payment_date">15/02/2014</string>
    <string name="payment_details">PAYMENT DETAILS*</string>
    <string name="state">STATE</string>
    <string name="system_data">SYSTEM DATA</string>
    <string name="system_data_payment_status">PAYMENT STATUS:</string>
    <string name="system_data_payment_id">PAYMENT ID:</string>
    <string name="system_data_last_modified_by">LAST MODIFIED BY:</string>
    <string name="system_data_last_modified">LAST MODIFIED:</string>
    
        
    <string-array name="payment_types">
        <item>PAYMENT TYPE</item>
        <item>Standard payment</item>
        <item>Universal payment</item>
    </string-array>    
    
    <string-array name="pay_from">
        <item>PAY FROM</item>
        <item>Single extended (JPY)\n1234567890123455</item>
        <item>Europe (EUR)\n1234567890123455</item>
    </string-array>  
    
    <string-array name="pay_to">
        <item>PAY TO</item>
        <item>CREDITOR NAME*</item>
        <item>Lorem Ipsum</item>
    </string-array>      

    <string-array name="pay_to_account">
        <item>PAY TO ACCOUNT</item>
        <item>CREDIT ACCOUNT*</item>
        <item>1234567890123455</item>
    </string-array>  
    
    <string-array name="payment_currency">
        <item>CURRENCY</item>
        <item>EUR</item>
        <item>USD</item>
    </string-array> 
    
    
    <string-array name="menu_usernames">
        <item>Jon Doe</item>
        <item>Janez Novak</item>
        <item>Long User Name</item>
    </string-array>
    
    <string-array name="menu_items">
        <item ></item>
        <item >Last Login: 04.02.2014 12:12:12</item>
        <item >Status</item>
        <item >Start page</item>
        <item >Accounts</item>
        <item >Loans</item>
        <item >Deposits</item>
        <item >Cards</item>
        <item >Payments</item>
        <item >New payments</item>
        <item >Templates</item>
        <item >Photo pay</item>
        <item >Sent payments</item>
        <item >Contacts</item>
        <item >GEO locator</item>
        <item >Contact information</item>
        <item >Other</item>
        <item >Our products</item>
        <item >Loan calculator</item>
        <item >Foreign exchange</item>
        <item >Currency converter</item>
        <item >Settings</item>
        <item >Language</item>
        <item >Change password</item>  
    </string-array>
     
    <!-- Keep them in order as the titles are in -->
    <array name="menu_icons">
        <item></item>
        <item>@drawable/last_login</item>
        <item>@null</item>
        <item>@drawable/start_page</item>
        <item>@drawable/accounts</item>
        <item>@drawable/loans</item>
        <item>@drawable/deposits</item>
        <item>@drawable/cards</item>
        <item>@null</item>
        <item>@drawable/new_payment_menu</item>
        <item>@drawable/templates</item>
        <item>@drawable/photo_pay</item>
        <item>@drawable/sent_payments</item>
        <item>@null</item>
        <item>@drawable/geo_locator</item>
        <item>@drawable/contact_information</item>
        <item>@null</item>
        <item>@drawable/our_products</item>
        <item>@drawable/loan_calculator</item>
        <item>@drawable/foreing_exchange</item>
        <item>@drawable/currency_converter</item>
        <item>@null</item>
        <item>@drawable/language</item>
        <item>@drawable/change_password</item>
    </array>

    <string-array name="menu_type">
        <item ></item>
        <item >ITEM</item>
        <item >HEADER</item>
        <item >ITEM</item>
        <item >ITEM</item>
        <item >ITEM</item>
        <item >ITEM</item>
        <item >ITEM</item>
    	<item >HEADER</item>
        <item >ITEM</item>
        <item >ITEM</item>
        <item >ITEM</item>
        <item >ITEM</item>
    	<item >HEADER</item>
        <item >ITEM</item>
        <item >ITEM</item>
    	<item >HEADER</item>
        <item >ITEM</item>
        <item >ITEM</item>
        <item >ITEM</item>
        <item >ITEM</item>
    	<item >HEADER</item>
    	<item >ITEM</item>
        <item >ITEM</item>
   </string-array>


</resources>
