<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scroll_page_step1"
	    android:layout_width="match_parent"
        android:layout_height="match_parent" >    
        
        <LinearLayout
	        style="@style/Content"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" >

	        <TextView
	            android:id="@+id/payment_type"
	            style="@style/ContentSectionTitle"
	            android:text="@string/payment_type" />
	
	        <View 
	            style="@style/BorderHorizontal" />
	
		    <RadioGroup
		        android:id="@+id/radioGroup1"
		        style="@style/RadioGroup"  >
		
		        <RadioButton
		            android:id="@+id/radio_new_payment"
	                style="@style/RadioButton"
	                android:text="@string/new_payment"
	                android:checked="true"
	                android:focusableInTouchMode="true" />
		
		        <LinearLayout
			        android:layout_width="0dip"
					android:layout_height="0dip"
					android:layout_weight="1" />
		        
		        <RadioButton
	                android:id="@+id/radio_from_template"
	                style="@style/RadioButton"
	                android:text="@string/from_template" />
		
		    </RadioGroup>
	
		    <Button
		        android:id="@+id/button_payment_types"
		        style="@style/ListButton"
        		android:text="@string/payment_type" />

		    <TextView
	            android:id="@+id/pay_from"
	            style="@style/ContentSectionTitle"
	            android:text="@string/pay_from" />
	
	        <View 
	            style="@style/BorderHorizontal" />
	
	        
	        <TextView
	            android:id="@+id/debit_account"
	            style="@style/ContentSectionLabel"
	            android:text="@string/debit_account" />
	        
		    <Button
		        android:id="@+id/button_pay_from"
		        style="@style/ListButton"
        		android:text="@string/pay_from" />
		    
	        <TextView
	            android:id="@+id/pay_to"
	            style="@style/ContentSectionTitle"
	            android:text="@string/pay_to" />
	
	        <View 
	            style="@style/BorderHorizontal" />

		    <Button
		        android:id="@+id/button_pay_to"
		        style="@style/ListButton_error"
        		android:text="@string/pay_to" />

	        
		    <Button
		        android:id="@+id/button_pay_to_account"
		        style="@style/ListButton_disabled"
        		android:text="@string/pay_to_account"
		        android:clickable="false" />
		    	        
	        <TextView
	            android:id="@+id/payment_data"
	            style="@style/ContentSectionTitle"
	            android:text="@string/payment_data" />
	
	        <View 
	            style="@style/BorderHorizontal" />

	        <LinearLayout
		        android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal" >
		        
	            <EditText
				    android:id="@+id/payment_amount"
				    android:hint="@string/payment_amount"
				    style="@style/ContentText2"
			        android:inputType="number"
			        android:layout_weight="1" />	        
		        
		        <LinearLayout
			        android:layout_width="0dip"
					android:layout_height="0dip"
					android:layout_weight="1" />
			        
			    <Button
			        android:id="@+id/button_payment_currency"
			        style="@style/ListButton2"
        			android:text="@string/payment_currency"
			        android:layout_weight="1" />
	        </LinearLayout>	
		        
	        <LinearLayout
		        android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal" >
	        	
	        	<TextView
		            android:id="@+id/execution_date"
		            style="@style/ContentSectionLabel2"
		            android:text="@string/execution_date"
			        android:layout_weight="1" />
	        
		        <LinearLayout
			        android:layout_width="0dip"
					android:layout_height="0dip"
					android:layout_weight="1" />
	        	
	        	<TextView
				    android:id="@+id/payment_date"
				    android:text="@string/payment_date"
				    style="@style/ContentText2"
				    android:onClick="showTimePickerDialog"
			        android:layout_weight="1" />	        
	        </LinearLayout>	
	        		        
            <EditText
			    android:id="@+id/payment_details"
			    android:hint="@string/payment_details"
			    style="@style/ContentTextArea"
		        android:inputType="text" />	        
	        
	        <LinearLayout
		        android:id="@+id/optional_data"
			    android:orientation="horizontal"
				style="@style/ContentSectionLayout" >
	
	            <TextView
		            android:id="@+id/optional_data_title"
		            style="@style/ContentSectionTitle_Small"
		            android:text="@string/optional_data" />
		    	
		    	<LinearLayout
			        android:layout_width="0dip"
					android:layout_height="0dip"
					android:layout_weight="1" />
		    
			    <ImageView
			        android:id="@+id/optional_data_arrow"
			        style="@style/OptionalDataImage"
			        android:src="@drawable/arrow_down" />
	        </LinearLayout>
	        
	        <View 
	            style="@style/BorderHorizontal" />
	
	        <LinearLayout
		        android:id="@+id/optional_data_layout"
        		android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="gone" >
			    
		        <TextView
		            android:id="@+id/optional_payer_name"
		            style="@style/ContentSectionLabel"
		            android:text="@string/optional_payer_name" />
	        
		        <EditText
				    android:id="@+id/optional_data_1"
				    style="@style/ContentText"
			        android:inputType="text" />	        
		        
		        <TextView
		            android:id="@+id/optional_debtor_reference"
		            style="@style/ContentSectionLabel"
		            android:text="@string/optional_debtor_reference" />
		        			    		    
	            <EditText
				    android:id="@+id/optional_data_2"
				    style="@style/ContentText"
			        android:inputType="text" />	        
	
	            <TextView
		            android:id="@+id/optional_creditor_reference"
		            style="@style/ContentSectionLabel"
		            android:text="@string/optional_creditor_reference" />
	            
	            <EditText
				    android:id="@+id/optional_data_3"
				    style="@style/ContentText"
			        android:inputType="text" />	  
			        
	            <CheckBox android:id="@+id/optional_data_urgent"
			        style="@style/CheckBox"
			        android:text="@string/optional_data_urgent"/>
            </LinearLayout>
            
		    <Button
		        android:id="@+id/button_next"
		        style="@style/ButtonNext2"
		        android:text="@string/button_next"
		        android:onClick="showNextStep" />

            
	    </LinearLayout>
	    
	</ScrollView>

</LinearLayout>