<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/DialogContent" >

	<TextView
        android:id="@+id/text"
        style="@style/DialogTitle"
        android:text="@string/discard_title" />
    
	
	<TextView
        android:id="@+id/text"
        style="@style/DialogText"
        android:text="@string/discard_payment" />
     
    <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
			
	    <Button
	        android:id="@+id/button_no"
	        style="@style/ButtonNext"
	        android:text="@string/button_no"
	        android:onClick="showPayStep"
			android:layout_weight="1" />
	    
	    <LinearLayout
	        android:layout_width="10dip"
			android:layout_height="0dip" />
	    			    					
	    <Button
	        android:id="@+id/button_yes"
	        style="@style/ButtonNext"
	        android:text="@string/button_yes"
	        android:onClick="showEditStep"
			android:layout_weight="1" />

	    	    
   </LinearLayout>     
 
</LinearLayout>