<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >
    
        <LinearLayout
            style="@style/MenuLayout"
            android:orientation="horizontal" >
        
           <Button
               android:id="@+id/menu_button_1"
               style="@style/MenuButton"
               android:drawableLeft="@drawable/new_payment"
               android:text="@string/menu_button_1_text" />

		   <View 
			    style="@style/MenuBorderVertical" />
           
           <Button
			    android:id="@+id/menu_button_2"
			    style="@style/MenuButton"
			    android:text="@string/menu_button_2_text"
			    android:drawableLeft="@drawable/save_as_trustie" />   
           
		   <View 
			    style="@style/MenuBorderVertical" />
           
           <Button
			    android:id="@+id/menu_button_3"
			    style="@style/MenuButton"
			    android:text="@string/menu_button_3_text"
			    android:drawableLeft="@drawable/save_as_template" />   
           
		   <View 
			    style="@style/MenuBorderVertical" />
           
           <Button
			    android:id="@+id/menu_button_4"
			    style="@style/MenuButton"
			    android:text="@string/menu_button_4_text"
			    android:drawableLeft="@drawable/save_as_template" />   
           
            
        </LinearLayout>    
    </HorizontalScrollView>

    <View 
	    style="@style/MenuBorderHorizontal" />
    
    <ScrollView
        android:id="@+id/scroll_page_step3"
	    android:layout_width="match_parent"
        android:layout_height="match_parent" >    
        
        <LinearLayout
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
	        android:orientation="vertical" >
 
 	        <LinearLayout
		        android:layout_width="wrap_content"
	        	style="@style/HeaderMessage"
		        android:orientation="horizontal" >
		        
		        <ImageView
			        android:id="@+id/image_header_message"
			        style="@style/HeaderMessageImage"
		        	android:src="@drawable/message_ok" />
		        
		        <TextView
		            android:id="@+id/header_message"
		            style="@style/MessageSendLabelData"
		            android:text="Payment send seccessfully." />
			</LinearLayout>        
            
            
	        <LinearLayout
		        style="@style/Content"
		        android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
		        android:orientation="vertical" >
	            
	            <TextView
		            android:id="@+id/state"
		            style="@style/ContentSectionTitle"
		            android:text="@string/state" />
		
		        <View 
		            style="@style/BorderHorizontal" />
		
		        
		        <LinearLayout
			        style="@style/ContentData"
			        android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
			        android:orientation="vertical" >

			        <TextView
			            android:id="@+id/debit_account_data"
			            style="@style/ContentSectionLabel_light"
			            android:text="Executed" />
				</LinearLayout>        
	            
		        	            	 	        
	            <TextView
		            android:id="@+id/pay_from"
		            style="@style/ContentSectionTitle"
		            android:text="@string/pay_from" />
		
		        <View 
		            style="@style/BorderHorizontal" />
		
		        
		        <LinearLayout
			        style="@style/ContentData"
			        android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
			        android:orientation="vertical" >
			        
			        <TextView
			            android:id="@+id/debit_account"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/debit_account" />
			        
			        <TextView
			            android:id="@+id/debit_account_data"
			            style="@style/ContentSectionLabelData"
			            android:text="Single extended (JPY)\n1234567890123455" />
				</LinearLayout>
		        	    
		        <TextView
		            android:id="@+id/pay_to"
		            style="@style/ContentSectionTitle"
		            android:text="@string/pay_to" />
		
		        <View 
		            style="@style/BorderHorizontal" />
	
		      
		        <LinearLayout
			        style="@style/ContentData"
			        android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
			        android:orientation="vertical" >
			        
			        <TextView
			            android:id="@+id/pay_to_name"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/pay_to_name" />
			        
			        <TextView
			            android:id="@+id/pay_to_name_data"
			            style="@style/ContentSectionLabelData"
			            android:text="Laura Kingsley" />
	
			        <TextView
			            android:id="@+id/pay_to_account"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/pay_to_account" />
			        
			        <TextView
			            android:id="@+id/pay_to_account_data"
			            style="@style/ContentSectionLabelData"
			            android:text="985439859485934" />
			        		        
				</LinearLayout>   	        
		        
		        
			    	        
		        <TextView
		            android:id="@+id/payment_data"
		            style="@style/ContentSectionTitle"
		            android:text="@string/payment_data" />
		
		        <View 
		            style="@style/BorderHorizontal" />
	
		        <LinearLayout
			        style="@style/ContentData"
			        android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
			        android:orientation="vertical" >
			        
			        <TextView
			            android:id="@+id/payment_data_amount"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/payment_data_amount" />
			        
			        <TextView
			            android:id="@+id/payment_data_amount_data"
			            style="@style/ContentSectionLabelData"
			            android:text="220 EUR" />
	
			        <TextView
			            android:id="@+id/payment_data_details"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/payment_data_details" />
			        
			        <TextView
			            android:id="@+id/payment_data_details_data"
			            style="@style/ContentSectionLabelData"
			            android:text="Lorem ipsum lorem ipsum lorem ipsum" />		        		        
				</LinearLayout>   	        
		        
		        
		        
		        <TextView
		            android:id="@+id/optional_data"
		            style="@style/ContentSectionTitle"
		            android:text="@string/optional_data" />
		
		        <View 
		            style="@style/BorderHorizontal" />
		        
		        	        
		        <LinearLayout
			        style="@style/ContentData"
			        android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
			        android:orientation="vertical" >
			        
			        <TextView
			            android:id="@+id/optional_data_payer_name"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/optional_data_payer_name" />
			        
			        <TextView
			            android:id="@+id/optional_data_payer_name_data"
			            style="@style/ContentSectionLabelData"
			            android:text="Mike Knight" />
	
			        <TextView
			            android:id="@+id/optional_data_debtor_reference"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/optional_data_debtor_reference" />
			               		        		        
			        <TextView
			            android:id="@+id/optional_data_debtor_reference_data"
			            style="@style/ContentSectionLabelData"
			            android:text="8394893849382" />
	
			        <TextView
			            android:id="@+id/optional_data_creditor_reference"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/optional_data_creditor_reference" />
			        
			        <TextView
			            android:id="@+id/optional_data_creditor_reference_data"
			            style="@style/ContentSectionLabelData"
			            android:text="85439594385934859843590843" />	
			            
			        <TextView
			            android:id="@+id/optional_data_urgent_payment"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/optional_data_urgent_payment" />
			        
			        <TextView
			            android:id="@+id/optional_data_urgent_payment_data"
			            style="@style/ContentSectionLabelData"
			            android:text="Yes" />	
				</LinearLayout> 
				
		        
		        
		        <LinearLayout
			        android:id="@+id/system_data"
				    android:orientation="horizontal"
					style="@style/ContentSectionLayout" >
		
		            <TextView
			            android:id="@+id/system_data_title"
			            style="@style/ContentSectionTitle_Small"
			            android:text="@string/system_data" />
			    	
			    	<LinearLayout
				        android:layout_width="0dip"
						android:layout_height="0dip"
						android:layout_weight="1" />
			    
				    <ImageView
				        android:id="@+id/optional_data_arrow"
				        style="@style/HeaderStepImages"
				        android:src="@drawable/arrow_down" />
		        </LinearLayout>
		        
		        <View 
		            style="@style/BorderHorizontal" />
		
	
	 	        <LinearLayout
			        android:id="@+id/system_data_layout"
	        		android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					style="@style/ContentData"
			        android:visibility="gone" >
				    
			        <TextView
			            android:id="@+id/system_data_payment_status"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/system_data_payment_status" />
			        
			        <TextView
			            android:id="@+id/system_data_payment_status_data"
			            style="@style/ContentSectionLabelData"
			            android:text="Prepared" />
	
			        <TextView
			            android:id="@+id/system_data_payment_id"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/system_data_payment_id" />
			        
			        		        		        
			        <TextView
			            android:id="@+id/system_data_payment_id_data"
			            style="@style/ContentSectionLabelData"
			            android:text="SKJJDD93940UDOIDO3993" />
	
			        <TextView
			            android:id="@+id/system_data_last_modified_by"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/system_data_last_modified_by" />
			        
			        <TextView
			            android:id="@+id/system_data_last_modified_by_data"
			            style="@style/ContentSectionLabelData"
			            android:text="Legal3 representativeCABP" />	
			            
			        <TextView
			            android:id="@+id/system_data_last_modified"
			            style="@style/ContentSectionLabel_light"
			            android:text="@string/system_data_last_modified" />
			        
			        <TextView
			            android:id="@+id/system_data_last_modified_data"
			            style="@style/ContentSectionLabelData"
			            android:text="04.02.2014 09:00" />	
	        
	            </LinearLayout>                    	            
	        </LinearLayout>
	    </LinearLayout>
	    
	</ScrollView>

</LinearLayout>