<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_app"
	style="@style/Content" >


	<TextView
        android:id="@+id/text"
        style="@style/DialogText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_password" />
     
	<EditText
	    android:id="@+id/password"
	    android:hint="@string/password"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		style="@style/ContentText"
	    android:inputType="text" />	        
	
	<LinearLayout
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
			
	    <Button
	        android:id="@+id/button_cancel"
	        android:layout_width="wrap_content"
			style="@style/ButtonNext"
	        android:text="@string/button_cancel"
	        android:onClick="showPayStep"
			android:layout_weight="1" />
	    
	    <LinearLayout
	        android:layout_width="10dip"
			android:layout_height="0dip" />
	    			    					
	    <Button
	        android:id="@+id/button_ok"
	        android:layout_width="wrap_content"
			style="@style/ButtonNext"
	        android:text="@string/button_ok"
	        android:onClick="showEditStep"
			android:layout_weight="1" />

	    	    
   </LinearLayout>     
 
</LinearLayout>